--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,143 +1,219 @@
-/* General Styles */
+/* Universal Styles */
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    font-family:'Young Serif', serif;
 }
 
 body {
-    background-color: #fcb1c854;
+    margin: 0;
+    padding: 0;
+    background: url("../images/greentexture.jpg");
+    background-size: cover;
 }
 
-/* Header */
-
-header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: rgb(96, 162, 229);
-    color: #fff;
+.header {
+    background-color: black;
+    color: white;
+    padding: 0;
+    height: 90px;
+    text-align: center;
 }
 
 header h1 {
-    display: inline-block;
-    font-size: 48px;
+    padding-left: 0px;
+    margin-left: 200px;
+    margin-bottom: 0px;
+    float: left;
+    text-align: left;
+    font-family: "Lucida Handwriting";
+    font-size: 30px;
+    color: white;
 }
 
 header nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+list-style-type: none;
+padding-top: 10px;
+padding-bottom: 10px;
+margin-right: 200px;
+float: right;
+font-size: 30px;
+color: white;
 }
 
-header nav ul{
+nav ul {
     list-style-type: none;
+    text-align: right;
+    margin: 0;
+    padding: 0;
 }
 
-header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
+nav ul li {
+    display: inline;
+    text-align: center;
+    margin-right: 40px;
+    margin-top: 10px;
+    padding: 5px;
 }
 
-/* Text Styles */
-
-a {
-    color: #ffffff;
-    text-decoration: none; 
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    text-align: center;
 }
 
-p {
-    font-size: 16;
-}
-
-/* Globe Div with Background Image */
-
-.globe {
-    height: 300px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("/assets/images/globe.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-/* Floats */
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: left;
-    margin-right: 25px;
-}
-
-/* Main */
-
-main {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*body {
-    font-size: 16px;
+.main {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    justify-content: flex-start;
-  }
-  
-  h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-  }
-  
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  
-  header {
-    padding: 40px;
+}
+
+.left-section {
+    float: left;
+    width: 25%;
+    padding: 5px;
+    color: white;
+    margin-right: 5px;
+    margin-left: 200px;
+    align-items: flex-start;
+}
+
+.right-section {
+    float: right;
+    width: 45%;
+    padding: 5px;
+    margin-left: 10px;
+    margin-right: 200px;
+    margin-top: 40px;
+    align-items: flex-end;
+}
+
+#helen {
+    width: 180px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 0px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+    padding: 5px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: black;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+}
+
+.major-box {
+    display: flex;
+    width: 100%;
+    height: 160px;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    background: #13293d;
-    color: var(--white);
-  }
+    font-size: 24px;
+    margin-bottom: 10px;
+    margin-right: 8px;
+    margin-left: 5px;
+    margin-top: 20px;
+    background-color: black;
+}
+
+.major-box a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    background-color: black;
+    color: white;
+}
+
+.major-box p {
+    display: inline-block;
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    text-align: center;
+    justify-self: center;
+}
+
+.box {
+    display: flex;
+    width: 48%;
+    height: 125px;
+    margin-bottom: 10px;
+    margin: 5px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 18px;
+    background-color: black;
+    color: white;
+}
+
+.box a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    background-color: black;
+    color: white;
+}
+
+.box p {
+    display: inline-block;
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    text-align: center;
+    justify-self: center;
+}
+
+h2 {
+    color: white;
+}
+
+.about-me {
+    width: 100%;
+    height:200px;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    font-size: 40px;
+    color: white; 
+    background-color: none; 
+}
+
+.about-me p{
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 8px;
+    padding-top: 8px;
+    padding-right: 8px;
+}
+
+.contact-me a{
+    color: white;
+}
+
+/* @media screen and (max-width: 768px) {
+    .left-section, .right-section {
+    width: 100%;
+}
+
+.box {
+    width; 100%;
+    margin: 2% 0;
+}
+*/
+
