--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 body {
     margin: 0;
     padding: 0;
-    background: url("../images/wavywallpaper.jpg");
-    background-size: cover;
+    background: url("../images/greentexture.jpg");
+    background-size: cover;*/
 }
 
 .header {
@@ -67,14 +67,17 @@ nav ul li a {
 }
 
 .left-section {
+    display: block;
     float: left;
     width: 25%;
     padding: 5px;
     color: white;
     margin-top: 40px;
-    margin-right: 5px;
+    margin-right: 20px;
     margin-left: 200px;
     align-items: flex-start;
+    padding-right: 2px;
+    border-right: 15px solid #800020;
 }
 
 .right-section {
@@ -125,8 +128,9 @@ nav ul li a {
     justify-content: center;
     text-align: center;
     font-size: 24px;
+    font-weight: normal;
     margin-bottom: 10px;
-    margin-right: 8px;
+    margin-right: 7px;
     margin-left: 5px;
     margin-top: 20px;
     background-color: black;
@@ -192,6 +196,16 @@ h2 {
     color: white;
 }
 
+#resumeLink:hover::before {
+    content: 'RESUME COMING SOON!';
+    display: block;
+    text-align: right;
+    margin-bottom: 5px;
+    font-size: 30px;
+    font-weight: bold;
+    color: red;
+}
+
 .about-me {
     width: 100%;
     height: 150px;
@@ -208,6 +222,7 @@ h2 {
     width: 100%;
     height: auto;
     font-size: 20px;
+    font-weight: normal;
     background-color: none;
     color: white;
     padding-left: 8px;
@@ -220,12 +235,12 @@ h2 {
     color: white;
 }
 #contact h2 {
-    margin-top: 80px;
+    margin-top: 200px;
     color: white
 }
 
 #contact {
-    margin-top: 200px;
+    margin-top: 20px;
     margin-left: 200px;
     font-size: 40px;
 }
@@ -234,13 +249,17 @@ h2 {
     margin-top: 100px;
 }
 
-.contact-me a{
-    color: white;
-}
-
 .boxcontact {
+    display: flex;
+    width: 100%;
+    height: 140px;
+    align-items: left;
+    justify-content: left;
+    font-size: 30px;
+    margin-bottom: 5px;
+    margin-right: 7px;
+    margin-left: 5px;
     margin-top: 5px;
-    font-size: 40px;
     color: white;
 }
 
