--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 body {
     margin: 0;
     padding: 0;
-    background: url("../images/greentexture.jpg");
-    background-size: cover;*/
+    background: url("../images/greengrid.jpg");
+    background-size: cover;
 }
 
 .header {
@@ -26,7 +26,7 @@ header h1 {
     float: left;
     text-align: left;
     font-family: "Lucida Handwriting";
-    font-size: 30px;
+    font-size: 42px;
     color: white;
 }
 
@@ -77,7 +77,7 @@ nav ul li a {
     margin-left: 200px;
     align-items: flex-start;
     padding-right: 2px;
-    border-right: 15px solid #800020;
+    border-right: 15px solid #00693e;
 }
 
 .right-section {
@@ -91,16 +91,22 @@ nav ul li a {
 }
 
 #helen {
-    width: 180px;
-    height: 250px;
+    width: 200px;
+    height: 290px;
     margin-top: 40px;
     margin-left: 200px;
     margin-right: 20px;
     margin-bottom: 5px;
     padding: 5px;
-    border-width: 10px;
-    border-style: solid;
-    border-color: black;
+}
+
+#helen {
+    border: 10px solid black;
+    transition: border-color 0.3s ease;
+}
+
+#helen:hover {
+    border-color:white;
 }
 
 #projects {
@@ -122,7 +128,7 @@ nav ul li a {
 
 .major-box {
     display: flex;
-    width: 100%;
+    width: 97%;
     height: 160px;
     align-items: center;
     justify-content: center;
@@ -130,7 +136,7 @@ nav ul li a {
     font-size: 24px;
     font-weight: normal;
     margin-bottom: 10px;
-    margin-right: 7px;
+    margin-right: 10px;
     margin-left: 5px;
     margin-top: 20px;
     background-color: black;
@@ -235,7 +241,7 @@ h2 {
     color: white;
 }
 #contact h2 {
-    margin-top: 200px;
+    margin-top: 180px;
     color: white
 }
 
@@ -263,7 +269,25 @@ h2 {
     color: white;
 }
 
+/* Footer style */ 
+footer {
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bolder;
+}
+
 /* @media screen and (max-width: 768px) {
+    .left-section, .right-section {
+    width: 100%;
+}
+
+.box {
+    width; 100%;
+    margin: 2% 0;
+}
+
+@media screen and (max-width: 400px) {
     .left-section, .right-section {
     width: 100%;
 }
