--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,6 +801,7 @@ footer pre:hover {
     header h1 {
         margin-left: 50px; /* Adjust spacing */
         font-size: 18px; /* Reduce font size */
+        font-family: "Lucida Handwriting";
     }
 
 
@@ -822,7 +823,7 @@ footer pre:hover {
         width: 50%; /* Make the image fill the width of its container */
         max-width: 100%; /* Ensure the image doesn't exceed its natural size */
         height: auto; /* Maintain aspect ratio */
-        margin-right: 60px;
+        margin-right: 80px;
         margin-top: 20px;
     }
 
@@ -830,7 +831,7 @@ footer pre:hover {
         display: flex;
         flex-wrap: wrap;
         align-content: flex-end;
-        margin-top: 5px;
+        margin-top: 30px;
     }
 
     .left-section {
@@ -852,8 +853,7 @@ footer pre:hover {
         display: none;
     }
 
-    h2, about-me {
-        color: white;
+    .about-me h2 {
         font-size: 16px;
     }
 
@@ -921,11 +921,11 @@ footer pre:hover {
     footer {
     font-size: 12px;
     font-weight: normal;
-    height: 24px;
+    height: 28px;
     text-align: center;
     align-items: center;
     margin: 0;
-    padding: 3px;
-    padding-bottom: 12px;
+    padding: 1px;
+    padding-bottom: 5px;
     } 
 }
